Improve the perfomance of several finders
Some finders have been improved with small tricks. Others with new algorithms like Aho-Corasick. In particular, the dump reading is now quite faster.